--- a/style.css
+++ b/style.css
@@ -1,3 +1,52 @@
 * {
     margin: 0;
 }
+
+body {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+main {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+
+main>img {
+    width: 40%;
+    height: 40%;
+    image-rendering: pixelated;
+}
+
+#bars {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+#textzone {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: calc(100% - 40px);
+    min-height: 10%;
+    border: 20px solid;
+    border-image: url("img/textzone.png") 40;
+}
+
+#textzone>button {
+    width: 50%;
+    padding: 3%;
+}
+
+#textzone>p {
+    width: 100%;
+    padding: 6%;
+}
