--- a/style.css
+++ b/style.css
@@ -2,12 +2,21 @@
     margin: 0;
 }
 
+#left,
+#right {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
 body {
     display: flex;
     justify-content: center;
     flex-direction: column;
     width: 100%;
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
     max-width: 800px;
     margin: 0 auto;
 }
@@ -28,6 +37,11 @@ main>img {
     display: flex;
     width: 100%;
     justify-content: space-between;
+}
+
+main>button {
+    width: 100%;
+    height: 100%;
 }
 
 #textzone {
