--- a/style.css
+++ b/style.css
@@ -39,6 +39,18 @@ main>img {
     justify-content: space-between;
 }
 
+.font_bar_player {
+    width: 90%;
+    background: yellow;
+    margin-right: 100%;
+}
+
+.font_bar_enemy {
+    width: 90%;
+    background: yellow;
+    margin-left: 100%;
+}
+
 main>button {
     width: 100%;
     height: 100%;
